Change mysql connector for postgresql, add postgresql docker compose

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/economy
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:8081/bigbiznis
+spring.datasource.username=user
 spring.datasource.password=password
 
 
