--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.7'
 services:
   postgres:
     image: postgres:13
@@ -8,6 +8,7 @@ services:
       POSTGRES_PASSWORD: password
     volumes:
       - yolo-volume:/var/lib/postgresql
+    restart: always
     ports:
     - 8081:5432
 volumes:
