Migrate average_salary table from mysql to postgres

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 services:
-  postgres:
+  postgres-dev:
     image: postgres:13
     environment:
       POSTGRES_DB: bigbiznis
@@ -11,5 +11,17 @@ services:
     restart: always
     ports:
     - 8081:5432
+  postgres-test:
+    image: postgres:13
+    environment:
+      POSTGRES_DB: bigbiznis-test
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    volumes:
+      - swag-volume:/var/lib/postgresql
+    restart: always
+    ports:
+      - 8082:5432
 volumes:
   yolo-volume:
+  swag-volume:
