--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test_economy
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:8082/bigbiznis-test
+spring.datasource.username=user
 spring.datasource.password=password
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.type=trace
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.format_sql=true
