Tidy configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,29 +3,27 @@ spring.profiles.active=dev
 # SERVER
 server.port=${PORT:8080}
 
-# DATA SYNC
-# try to sync everything that is missing from given date forward
-exchangerate.largeSyncStartingDate=1991-01-01
-
 # DATE FORMAT
 spring.mvc.format.date=d.M.yyyy
+
+# SECURITY
+spring.security.user.name=admin
+spring.security.user.password=password
+spring.security.user.roles=ACTUATOR
+
+# WEB
+# static resources caching - in seconds if no suffix is given
+spring.resources.cache.cachecontrol.max-age=600
 
 # ACTUATOR
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-# USER DETAILS
-spring.security.user.name=admin
-spring.security.user.password=password
-spring.security.user.roles=ACTUATOR
-
-#workaround for https://bugs.mysql.com/bug.php?id=99487
-spring.datasource.hikari.data-source-properties.cacheDefaultTimezone=false
+# APPLICATION
+# DATA SYNC
+# try to sync everything that is missing from given date forward
+bb.exchange-rate.large-sync-starting-date=1991-01-01
 
 # DASHBOARD
 # overview
-dashboard.overview.exchangeRates=EUR, USD, GBP, RUB
-
-# WEB
-# static resources caching - in seconds if no suffix is given
-spring.resources.cache.cachecontrol.max-age=600
+bb.dashboard.exchange-rates=EUR, USD, GBP, RUB
